kube-rethinkdb/rethinkdb-statefulset.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    app: rethinkdb
  name: rethinkdb
spec:
  replicas: 1
  serviceName: rethinkdb
  template:
    metadata:
      labels:
        app: rethinkdb 
    spec:
      containers:

      #RethinkDB statefulset
      - image: rosskukulinski/rethinkdb-kubernetes:2.3.5
        imagePullPolicy: Always
        name: rethinkdb
        ports:
        - containerPort: 8080
          name: admin
        - containerPort: 28015
          name: driver
        - containerPort: 29015
          name: cluster
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - mountPath: /data
          name: data
        readinessProbe:
          exec:
            command:
            - /probe
        livenessProbe:
          exec:
            command:
              - /probe

      #RethinkDB sidecar
      - image: node
        imagePullPolicy: Always
        name: rethinkdb-sidecar
        command:
        - /bin/sh
        - -ec
        - |
          npm install -g recli
          if ! ls -A /data ; then
          	recli --host localhost --port 28015 'r.dbCreate("tyltInbox")'
          	recli --host localhost --port 28015 --database tyltInbox 'r.tableCreate("messages_twitter")'
          	recli --host localhost --port 28015 --database tyltInbox 'r.tableCreate("messages_facebook")'
          	recli --host localhost --port 28015 --database tyltInbox 'r.tableCreate("polls_facebook")'
          	recli --host localhost --port 28015 --database tyltInbox 'r.tableCreate("manual_votes")'
          fi
        volumeMounts:
        - mountPath: /data
          name: data
        - name: backup-dir
          mountPath: /mnt/tylt-rethink-prod
          readOnly: PRODUCTION_VAR

      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: data
        emptyDir: {}
      - name: backup-dir
        hostPath:
          path: /mnt/s3-backup-share/tylt-rethink-prod
