kube-rethinkdb/rethinkdb-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    db: rethinkdb-cluster
  name: rethinkdb-cluster
  annotations:
    traefik.backend.loadbalancer.sticky: true
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  clusterIP: None
  ports:
  - port: 29015
    name: cluster
  - port: 28015
    name: driver
  - port: 8080
    name: admin
  selector:
    db: rethinkdb
    role: replica
