kube-rethinkdb/rethinkdb-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rethinkdb
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.backend.loadbalancer.sticky: true
spec:
  rules:
  - host: rethinkdb.NAMESPACE_VAR.kubernetes.thetylt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: rethinkdb
          servicePort: 8080
